@@ -22,6 +22,18 @@ apply from: "jacoco.gradle"
 apply plugin: 'kotlin-android'
 apply plugin: 'org.jetbrains.kotlin.kapt'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
+
+kapt {
+    javacOptions {
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+    }
+}
 //apply plugin: 'com.google.gms.google-services'
 //apply plugin: 'com.google.firebase.crashlytics'
 
@@ -320,8 +332,8 @@ android {
         ecap {
             dimension = 'baseDimension'
             applicationIdSuffix ".ecap"
-            versionCode 44
-            versionName "v8.0.3"
+            versionCode 48
+            versionName "v8.0.5"
             buildConfigField "String", 'opensrp_url', '"https://opensrp.ecap.bluecodeltd.com/opensrp/"'
             buildConfigField "String", 'guidebooks_url', '"https://opensrp.s3.amazonaws.com/media/ba/"'
             buildConfigField "String", 'opensrp_url_debug', '"https://opensrp.ecap.bluecodeltd.com/opensrp/"'
@@ -330,7 +342,7 @@ android {
             buildConfigField "String[]", "ALLOWED_LOCATION_LEVELS_DEBUG", '{"Country","Province","District","Ward","Health Facility"}'
             buildConfigField "String", 'DEFAULT_LOCATION', '"Health Facility"'
             buildConfigField "String", 'DEFAULT_LOCATION_DEBUG', '"Health Facility"'
-            buildConfigField "int", "DATABASE_VERSION", '26'
+            buildConfigField "int", "DATABASE_VERSION", '29'
         }
     }
 }
@@ -350,8 +362,8 @@ configurations.all {
     resolutionStrategy {
         dependencySubstitution {
             substitute module('io.github.bluecodesystems:android-p2p-sync') using module('com.github.BlueCodeSystems:android-p2p-sync:v0.5.0')
-            substitute module('io.github.bluecodesystems:opensrp-client-core') using module('com.github.BlueCodeSystems:opensrp-client-core:v7.0.0')
-            substitute module('org.smartregister:opensrp-client-core') using module('com.github.BlueCodeSystems:opensrp-client-core:v7.0.0')
+            substitute module('io.github.bluecodesystems:opensrp-client-core') using module('com.github.BlueCodeSystems:opensrp-client-core:v8.0.3-beta')
+            substitute module('org.smartregister:opensrp-client-core') using module('com.github.BlueCodeSystems:opensrp-client-core:v8.0.3-beta')
             substitute module('org.jeasy:easy-rules-core') using module('org.jeasy:easy-rules-core:3.4.0')
             substitute module('org.jeasy:easy-rules-support') using module('org.jeasy:easy-rules-support:3.4.0')
             substitute module('org.jeasy:easy-rules-mvel') using module('org.jeasy:easy-rules-mvel:3.4.0')
@@ -386,6 +398,7 @@ dependencies {
         exclude group: 'stax', module: 'stax-api'
         exclude group: 'com.mapbox.mapboxsdk', module: 'mapbox-android-sdk'
     }
+    implementation 'com.google.firebase:firebase-crashlytics:20.1.0'
     // Core library desugaring for Java 8+ APIs used by dependencies
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
@@ -419,6 +432,9 @@ dependencies {
 
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'
 
+    // MaterialEditText fork on Maven Central (BlueCodeSystems)
+    implementation 'io.github.bluecodesystems:MaterialEditTextLibrary:3.1.5'
+
     implementation(project(":opensrp-ecap-chw-core")) {
         transitive = true
         exclude group: 'com.android.support', module: 'appcompat-v7'
@@ -430,7 +446,7 @@ dependencies {
 //        exclude group: 'io.ona.kujaku', module: 'library'
         exclude group: 'com.github.lecho', module: 'hellocharts-library'
     }
-//    implementation 'com.google.firebase:firebase-crashlytics:19.3.0'
+    implementation 'com.google.firebase:firebase-crashlytics:19.3.0'
     implementation 'com.github.javiersantos:AppUpdater:2.7'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.cardview:cardview:1.0.0'
